<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/newItemEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:hint="@string/item_hint">

    </EditText>

    <Button
        android:id="@+id/cancelItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newItemEditText"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/cancel_btn"
        android:textSize="16sp" />

    <Button
        android:id="@+id/saveItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newItemEditText"
        android:text="@string/save_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimaryDark">

    </Button>

</RelativeLayout>
